# django-reaction-system

./: LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
reaction/: __init__.py  admin.py  apps.py  models.py  settings.py  urls.py  views.py
reaction/migrations/: 0001_initial.py  0002_config.py
reaction/static/css/: style.css
reaction/static/reaction/css/: reaction.min.css  style.css  style.min.css
reaction/static/reaction/js/: reaction.js  reaction.min.js
reaction/static/reaction/tailwindcss/: tailwind.config.js
reaction/static/tailwindcss/: tailwind.config.js
reaction/templates/reaction/: reaction.html  reaction_form.html
reaction/templates/reaction/reaction/: reaction.html
reaction/templates/reaction/utils/: IMPORTS.html  SCRIPTS.html
reaction/templates/utils/: SCRIPTS.html
reaction/templatetags/: reaction_tags.py
